# AWS-Certified-AI-Practitioner

./: app.py  pyproject.toml
